--- a/index.html
+++ b/index.html
@@ -14,11 +14,23 @@
     <nav class="navigation">
 
       <div class="bloc_one">
+
+        <div class="burger">
+        <img src="images/icon-menu.svg" alt="">
+        </div>
+
         <div class="logo">
           <img src="images/logo.svg" alt="">
         </div>
 
         <div class="menu">
+
+
+
+
+
+
+          
           <ul class="menul">
             <a class="deco" href="#">
               <li>Collections</li>
@@ -53,7 +65,7 @@
       </div>
     </nav>
 
-    <div class="all">
+    <!-- <div class="all">
       <div class="left">
         <div class="left_up">
           <img class="chausse" src="images/image-product-1.jpg" alt="chaussure">
@@ -121,7 +133,7 @@
 
       </div>
     </div>
-  </div>
+  </div> -->
 
 </body>
 
