--- a/index.html
+++ b/index.html
@@ -24,13 +24,6 @@
         </div>
 
         <div class="menu">
-
-
-
-
-
-
-          
           <ul class="menul">
             <a class="deco" href="#">
               <li>Collections</li>
@@ -65,7 +58,7 @@
       </div>
     </nav>
 
-    <!-- <div class="all">
+    <div class="all">
       <div class="left">
         <div class="left_up">
           <img class="chausse" src="images/image-product-1.jpg" alt="chaussure">
@@ -133,7 +126,7 @@
 
       </div>
     </div>
-  </div> -->
+  </div>
 
 </body>
 
